--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="/css/main.css">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <link rel="manifest" href="/public/manifest.json">
+  <link rel="shortcut icon" href="/public/favicon.ico">
 
-    <title>ToDo App</title>
-  </head>
-  <body>
-    <div id="content"></div>
-    <script src="/js/bundle.js" type="text/javascript"></script>
+  <title>ToDo App</title>
+</head>
+<body>
+<div id="content"></div>
+<script src="/src/index.js" type="text/javascript"></script>
 
-  </body>
+</body>
 </html>
